--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
   
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main1.css">
   <script src="https://kit.fontawesome.com/95583fc785.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- Hamburger Control Using JavaScript onclick function -->
-  <h2 id="home" style="margin-top: -20px;"></h2>
+  
+  <span id="home" style="margin-top: -20px;"></span>
   <div class="navtop">
 
     <header class="header">
 
       <img class="chef" src="img/Chef.svg" alt="Waiter">
       <h1 class="logo">Antonio's Cafe</h1>
-
+<!-- Hamburger Control Using JavaScript onclick function -->
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fas fa-bars"></i>
       </a>
@@ -37,16 +37,15 @@
 
 
   </div>
-  <div style="padding-top: 100px;">
-    <img src="img/pexels-waldemar-brandt-2290070a.jpg" alt="Chris standing up holding his daughter Elva" class="imgResponse" height="750">
-
+  <div  style="padding-top: 0;" >
+    <img class="imgResponse" src="img/pexels-waldemar-brandt-2290070a.jpg" alt="Cafe Bar Setting"  >
   </div>
 
 
   <div class="row" id="about">
     <div class="primary col hide-small">
       <h2>Great food</h2>
-      <img class="feat-img " src="img/pexels-chevanon-photography-323682c.jpg" alt="Drinks and eats" width="600"
+      <img class="feat-img " src="img/pexels-chevanon-photography-323682c.jpg" alt="Drinks and eats" width="300"
         height="400">
 
     </div>
@@ -64,6 +63,22 @@
         donuts. sapiente nihil, similique minus possimus magnam hic reprehenderit. Explicabo, iure iste</p>
     </div>
     <!--/.secondary-->
+
+    <div class="tertiary col hide-small">
+      <h2>Great food</h2>
+      <img class="feat-img " src="img/pexels-rajesh-tp-1624487b.jpg" alt="Drinks and eats" width="300"
+        height="400">
+
+    </div>
+    <!--/.tertiary-->
+
+    <!-- <div class="tertiary col">
+			<h2>How to get here</h2>
+			<p><strong>Plane: </strong>Tiramisu caramels gummies chupa chups lollipop muffin. Jujubes chocolate caramels cheesecake brownie lollipop drag&#233;e cheesecake.</p>
+			<p><strong>Train: </strong>Pie apple pie pudding I love wafer toffee liquorice sesame snaps lemon drops. Lollipop gummi bears dessert muffin I love fruitcake toffee pie.</p>
+			<p><strong>Car: </strong>Jelly cotton candy bonbon jelly-o jelly-o I love. I love sugar plum chocolate cake pie I love pastry liquorice.</p>
+		</div> -->
+    <!--/.tertiary-->	
 
   </div>
   <script src="js/catering.js"></script>
