--- a/index.html
+++ b/index.html
@@ -5,82 +5,108 @@
   <meta charset="utf-8">
   <title>Antonio's Cafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main1.css">
+  <link rel="stylesheet" href="css/main.css">
   <script src="https://kit.fontawesome.com/95583fc785.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  
-  <span id="home" style="margin-top: -20px;"></span>
-  <div class="navtop">
+  <!-- <div class="wrap"> -->
+    <h2 id="home" id="top" style="margin-top: -20px;"></h2>
+    <div class="navtop">
 
-    <header class="header">
+      <header class="header">
 
-      <img class="chef" src="img/Chef.svg" alt="Waiter">
-      <h1 class="logo">Antonio's Cafe</h1>
-<!-- Hamburger Control Using JavaScript onclick function -->
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fas fa-bars"></i>
-      </a>
-      <ul class="nav" id="myTopnav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#menu">Menu</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+        <img class="chef" src="img/Chef.svg" alt="Waiter">
+        <h1 class="logo">Antonio's Cafe</h1>
+        <!-- Hamburger Control Using JavaScript onclick function -->
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fas fa-bars"></i>
+        </a>
+        <ul class="nav" id="myTopnav">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#menu">Menu</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </header>
+    </div>
+    <div>
+      <img class="imgResponse" src="img/pexels-waldemar-brandt-2290070a.jpg" alt="Cafe Bar Setting">
+    </div>
 
-    </header>
+    <!-- About Section -->
+    <div class="row">
+      <div class="primary col hide-small">
+        <h2>Great food</h2>
+        <img class="feat-img " src="img/pexels-chevanon-photography-323682c.jpg" alt="Drinks and eats" width="300"
+          height="400">
+      </div>
+      <!--/.primary-->
 
 
-  </div>
-  <div  style="padding-top: 0;" >
-    <img class="imgResponse" src="img/pexels-waldemar-brandt-2290070a.jpg" alt="Cafe Bar Setting"  >
-  </div>
+      <div class="secondary col">
+        <h2 class="col-top" id="sec-col"><span id="about"></span>About the Cafe</h2>
+        <p>Everything in this cafe is worth waiting in line for.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, fugit neque, architecto repellat suscipit
+          sint, omnis qui temporibus ullam labore dolorum. Eaque voluptatibus deserunt itaque qui a cupiditate hic
+          labore.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim laborum quisquam, dolores dolorem
+          exercitationem
+          perspiciatis ipsam praesentium, pariatur sit .</p>
+        <p class="hide-medium">Cake sesame snaps sweet tart candy canes tiramisu I love oat cake chocolate bar. Jelly
+          beans pastry browniesugar plum pastry bear claw tiramisu tootsie roll. Tootsie roll wafer I love chocolate
+          donuts. sapiente nihil, similique minus possimus magnam hic reprehenderit. Explicabo, iure iste</p>
+      </div>
+      <!--/.secondary-->
 
+      <div class="tertiary col hide-small">
+        <h2>Great food</h2>
+        <img class="feat-img " src="img/pexels-rajesh-tp-1624487b.jpg" alt="Drinks and eats" width="300" height="400">
 
-  <div class="row" id="about">
-    <div class="primary col hide-small">
-      <h2>Great food</h2>
-      <img class="feat-img " src="img/pexels-chevanon-photography-323682c.jpg" alt="Drinks and eats" width="300"
-        height="400">
+      </div>
+      <!--/.tertiary-->
 
     </div>
-    <!--/.primary-->
 
-    <div  class="secondary col" >
-      <h2 class="col-top" id="sec-col">About the Cafe</h2>
-      <p>Everything in this cafe is worth waiting in line for.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, fugit neque, architecto repellat suscipit
-        sint, omnis qui temporibus ullam labore dolorum. Eaque voluptatibus deserunt itaque qui a cupiditate hic labore.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim laborum quisquam, dolores dolorem exercitationem
-        perspiciatis ipsam praesentium, pariatur sit .</p>
-      <p class="hide-medium">Cake sesame snaps sweet tart candy canes tiramisu I love oat cake chocolate bar. Jelly
-        beans pastry browniesugar plum pastry bear claw tiramisu tootsie roll. Tootsie roll wafer I love chocolate
-        donuts. sapiente nihil, similique minus possimus magnam hic reprehenderit. Explicabo, iure iste</p>
+    <!-- Menu Section -->
+    <div class="row">
+      <h4><span id="menu"></span></h4>
+      <div class="primary-1 col">
+        <h2>Le Menu</h2>
+        <h4>Bread Basket</h4>
+        <p class="text-grey">Assortment of fresh baked fruit breads and muffins <strong>5.50</strong></p>
+
+        <h4>Honey Almond Granola with Fruits</h4>
+        <p class="text-grey">Natural cereal of honey toasted oats, raisins, almonds and dates <strong>7.00</strong></p>
+
+        <h4>Belgian Waffle</h4>
+        <p class="text-grey">Vanilla flavored batter with malted flour <strong>7.50</strong></p>
+
+        <h4>Scrambled eggs</h4>
+        <p class="text-grey">Scrambled eggs, roasted red pepper, garlic, with green onions <strong>7.50</strong></p>
+
+        <h4>Blueberry Pancakes</h4>
+        <p class="text-grey">With syrup, butter and lots of berries <strong>8.50</strong></p>
+      </div>
+      <!--/.primary-1-->
+
+      <div class="secondary-1 col ">
+        <h2>Great food</h2>
+        <img class="feat-img-1 opacity-min {
+        opacity: 0.75
+      }" src="img/pexels-william-choquette-2641886a.jpg" alt="Drinks and eats" width="300" height="400">
+
+      </div>
+      <!--/.secondary-1-->
     </div>
-    <!--/.secondary-->
-
-    <div class="tertiary col hide-small">
-      <h2>Great food</h2>
-      <img class="feat-img " src="img/pexels-rajesh-tp-1624487b.jpg" alt="Drinks and eats" width="300"
-        height="400">
-
-    </div>
-    <!--/.tertiary-->
-
-    <!-- <div class="tertiary col">
-			<h2>How to get here</h2>
-			<p><strong>Plane: </strong>Tiramisu caramels gummies chupa chups lollipop muffin. Jujubes chocolate caramels cheesecake brownie lollipop drag&#233;e cheesecake.</p>
-			<p><strong>Train: </strong>Pie apple pie pudding I love wafer toffee liquorice sesame snaps lemon drops. Lollipop gummi bears dessert muffin I love fruitcake toffee pie.</p>
-			<p><strong>Car: </strong>Jelly cotton candy bonbon jelly-o jelly-o I love. I love sugar plum chocolate cake pie I love pastry liquorice.</p>
-		</div> -->
-    <!--/.tertiary-->	
-
-  </div>
+  <!-- </div> -->
+  <!--/.wrap-->
+  <!--/footer-->
+ 
   <script src="js/catering.js"></script>
 </body>
 
