--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
   <!-- </div> -->
   <!--/.wrap-->
   <!--/footer-->
+  <footer class="main-footer">
+    <span>&copy;2021 In the Ville - Antonio's Cafe.</span><br>
+    <a class= "top" href="#top" >Back to top &raquo;</a>
+  </footer>
  
   <script src="js/catering.js"></script>
 </body>
