added code using min-height and calc function to create sticky footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- <div class="wrap"> -->
+  <div class="wrap">
     <h2 id="home" id="top" style="margin-top: -20px;"></h2>
     <div class="navtop">
 
@@ -103,7 +103,7 @@
       </div>
       <!--/.secondary-1-->
     </div>
-  <!-- </div> -->
+  </div>
   <!--/.wrap-->
   <!--/footer-->
   <footer class="main-footer">
