added waiter icon and displayed in mobile view positioned using absolute and calc function also added the same positioning rule to hamburger icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
       <header class="header">
 
-        <img class="chef" src="img/Chef.svg" alt="Waiter">
+        <img class="waiter" id="waiter" src="img/Waiter.svg" alt="Waiter">
+        <img class="chef" src="img/Chef.svg" alt="Chef">
         <h1 class="logo">Antonio's Cafe</h1>
         <!-- Hamburger Control Using JavaScript onclick function -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -35,7 +36,7 @@
       </header>
     </div>
     <div>
-      <img class="imgResponse" src="img/pexels-waldemar-brandt-2290070a.jpg" alt="Cafe Bar Setting">
+      <img class="imgResponse" src="img/pexels-waldemar-brandt-2290070blur.jpg" alt="Cafe Bar Setting">
     </div>
 
     <!-- About Section -->
@@ -108,9 +109,9 @@
   <!--/footer-->
   <footer class="main-footer">
     <span>&copy;2021 In the Ville - Antonio's Cafe.</span><br>
-    <a class= "top" href="#top" >Back to top &raquo;</a>
+    <a class="top" href="#top">Back to top &raquo;</a>
   </footer>
- 
+
   <script src="js/catering.js"></script>
 </body>
 
