added food cart logo to header and created break-point at max-width at 1030px and at that break-point removes food cart logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navtop">
 
       <header class="header">
-
+         <img class="foodCart" id="Food Cart" src="img/Food Cart.svg" alt="Waiter"> 
         <img class="waiter" id="waiter" src="img/Waiter.svg" alt="Waiter">
         <img class="chef" src="img/Chef.svg" alt="Chef">
         <h1 class="logo">Antonio's Cafe</h1>
