--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="wrap">
       <h2 id="home" id="top" style="margin-top: -20px"></h2>
 
-      <!-- Header banner with nav controls and logo and images -->
+      <!-- Header banner with nav controls, logo and images -->
       <div class="navtop">
         <header class="header">
           <img
@@ -36,6 +36,7 @@
           <h1 class="logo">Antonio's Cafe</h1>
 
           <!-- Hamburger Control Using JavaScript onclick function -->
+          <!-- From MDN JavaScript URIs - javascript:void(0) - Means Click here to do nothing - in other words when hamburger is clicked don't move to another section of the web page-->
           <a
             href="javascript:void(0);"
             class="icon"
@@ -43,7 +44,7 @@
           >
             <i class="fas fa-bars"></i>
           </a>
-          <ul class="nav" id="myTopnav">
+          <ul class="nav" id="myTopNav">
             <li class="hide-small"><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
@@ -66,31 +67,32 @@
           </p>
         </div>
         <img
-          class="imgResponse mySlidesB"
+          class="imgResponse mySlidesC"
           src="img/pexels-waldemar-brandt-2290070blur.jpg"
           alt="Cafe Bar Setting"
         />
         <img
-          class="imgResponse mySlidesB"
+          class="imgResponse mySlidesC"
           src="img/pexels-daria-shevtsova-704982BB.jpg"
           alt="Cafe Bar Setting"
         />
         <img
-          class="imgResponse mySlidesB"
+          class="imgResponse mySlidesC"
           src="img/pexels-kaboompics-com-6267BB.jpg"
           alt="Cafe Bar Setting"
         />
         <img
-          class="imgResponse mySlidesB"
+          class="imgResponse mySlidesC"
           src="img/pexels-lisa-fotios-776538BB.jpg"
           alt="Cafe Bar Setting"
         />
         <img
-          class="imgResponse mySlidesB"
+          class="imgResponse mySlidesC"
           src="img/pexels-sindre-strøm-1398266BB.jpg"
           alt="Cafe Bar Setting"
         />
       </div>
+      <!-- Main picture End-->
 
       <!-- About Section -->
 
@@ -99,28 +101,28 @@
         <div class="about-section-picture col hide-small">
           <h2>Great food</h2>
           <img
-            class="feat-img mySlides animate-opacity"
+            class="feat-img mySlidesB animate-opacity"
             src="img/pexels-chevanon-photography-323682c.jpg"
             alt="Drinks and eats"
             width="300"
             height="400"
           />
           <img
-            class="feat-img mySlides animate-opacity"
+            class="feat-img mySlidesB animate-opacity"
             src="img/pexels-ekaterina-bolovtsova-5702789A.jpg"
             alt="Drinks and eats"
             width="300"
             height="400"
           />
           <img
-            class="feat-img mySlides animate-opacity"
+            class="feat-img mySlidesB animate-opacity"
             src="img/pexels-flo-dahm-541216A.jpg"
             alt="Drinks and eats"
             width="300"
             height="400"
           />
           <img
-            class="feat-img mySlides animate-opacity"
+            class="feat-img mySlidesB animate-opacity"
             src="img/pexels-polina-kovaleva-5420369A.jpg"
             alt="Drinks and eats"
             width="300"
@@ -131,7 +133,7 @@
 
         <!--about-section content-->
         <div class="about-section-content col">
-          <h2 class="col-top" id="sec-col">
+          <h2 class="about-section-top" id="aboutSection">
             <span class="about" id="about"></span>About the Cafe
           </h2>
           <p>Everything in this cafe is worth waiting in line for.</p>
@@ -185,7 +187,6 @@
             height="400"
           />
         </div>
-        <hr />
         <!--end about-section-content-picture-->
       </div>
 
@@ -195,13 +196,13 @@
         <h4><span class="menu" id="menu"></span></h4>
         <div class="menu-section-content col">
           <h2>Le Menu</h2>
-          <!--/Insert JavaScript Multidimensional Array Food Items -->
+          <!--/Insert JavaScript Multidimensional Array Food Items into main element-->
           <main></main>
         </div>
         <!--end menu-section-content-picture-->
 
         <!--menu section content picture-->
-        <div class="menu-section-content-picture col">
+        <div class="menu-section-content-picture menu-picture-col">
           <h2>Bon Appétit</h2>
           <img
             class="feat-img-1"
@@ -254,7 +255,7 @@
             consequat.
           </p>
 
-          <form action="/action_page.php" target="_blank">
+          <form id="myForm" action="/action_page.php" target="_blank">
             <p>
               <input
                 class="form-input padding-16"
