added comments adjusted picture in mobile, added background image to about and menu columns, adjusted top link in footer, added setInterval method to reload web page every hour to update store offer.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Antonio's Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i"
       rel="stylesheet"
@@ -19,8 +18,8 @@
   </head>
 
   <body>
-    <div class="wrap">
-      <h2 id="home" id="top" style="margin-top: -20px"></h2>
+    <div class="wrap" id="top">
+      <h2 id="home" style="margin-top: -20px"></h2>
 
       <!-- Header banner with nav controls, logo and images -->
       <div class="navtop">
@@ -156,7 +155,7 @@
         <!--end about-section content-->
 
         <!--about section content picture-->
-        <div class="about-section-content-picture col hide-small">
+        <div class="about-section-content-picture col">
           <h2>Fine Dinning</h2>
           <img
             class="feat-img mySlidesA animate-opacity-2"
@@ -244,8 +243,8 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim
             veniam, quis nostrud exerci tation ullamcorper
-            <a href="">suscipit lobortis</a> nisl ut aliquip ex ea commodo
-            consequat.
+            <a href="javascript:void(0);">suscipit lobortis</a> nisl ut aliquip
+            ex ea commodo consequat.
           </p>
           <p class="hide-medium hide-small">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
